Process Hacker

2.37
 * HIGHLIGHTS:
 * OTHER CHANGES:

2.36
 * HIGHLIGHTS:
   * New rich pop-up UI when hovering the cursor over a tray icon, showing the most active processes
   * Completely new Memory tab for processes, with heap, stack and working set usage
   * Process Hacker now takes 32-bit dumps of 32-bit processes on 64-bit Windows
     * NOTE: When using the portable (.zip) release, the entire archive must be extracted
   * Updated DotNetTools plugin:
     * Process Hacker now displays managed stack traces for 32-bit .NET processes on 64-bit Windows
     * Fixed inaccurate stack traces when clicking Refresh
     * Added AppDomain column for threads in .NET programs
 * OTHER CHANGES:
   * Added customizable bytes per row setting for memory editor
   * Dramatically faster handle listing and search when running without administrative privileges
   * Improved accuracy and speed of symbol resolution, especially when new modules are loaded
   * Added trigger and delayed start information to service list
   * Added file information to service list tooltips
   * Balloon tips for process/service notifications are now clickable
   * Added handle names for unnamed File objects
   * Added I/O Priority to tray icon process menu
   * Added warning for users who attempt to start the 32-bit version on 64-bit Windows
   * Updated ExtendedServices plugin:
     * Added service protection and SID information
     * Added auto-elevation when saving recovery information, triggers and other service settings
   * Updated ExtendedTools plugin:
     * Added tray icon mini info window support
     * Improved automatic GPU node selection
   * Updated UserNotes plugin:
     * Added tray icon mini info window support
   * Fixed a bug in phsvc that caused hangs when automatically elevating actions
   * Fixed hang when viewing handle security for certain File objects
   * Fixed lack of information on startup when using slower refresh intervals
   * Fixed Read/Write Address crash