@@ -139,6 +139,7 @@ extern GUID VISTA_CONTEXT_GUID;
 extern GUID WIN7_CONTEXT_GUID;
 extern GUID WIN8_CONTEXT_GUID;
 extern GUID WINBLUE_CONTEXT_GUID;
+extern GUID WINTHRESHOLD_CONTEXT_GUID;
 
 typedef struct PACKAGE_ID PACKAGE_ID;
 
