@@ -154,6 +154,21 @@ NTSTATUS KphInitializeDynamicPackage(
         Package->StructData.ObDecodeShift = 16;
         Package->StructData.ObAttributesShift = 17;
     }
+    // Windows 10
+    else if (majorVersion == 10 && minorVersion == 0 && buildNumber == 10240)
+    {
+        Package->BuildNumber = 10240;
+        Package->ResultingNtVersion = PHNT_THRESHOLD;
+
+        Package->StructData.EgeGuid = 0x18;
+        Package->StructData.EpObjectTable = 0x418;
+        Package->StructData.EreGuidEntry = 0x20;
+        Package->StructData.HtHandleContentionEvent = 0x30;
+        Package->StructData.OtName = 0x10;
+        Package->StructData.OtIndex = 0x28;
+        Package->StructData.ObDecodeShift = 16;
+        Package->StructData.ObAttributesShift = 17;
+    }
     else
     {
         return STATUS_NOT_SUPPORTED;
